# anode-next

./: .dockerignore  .gitattributes  .gitignore  BENCHMARK_README.md  BENCHMARK_TESTS.md  CMakeLists.txt  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  app.conf  docker-compose.yml  main.cpp  nginx.conf  postgres.conf.docker  postgres.conf.example
.github/workflows/: build.yml
docs/: README.md  meta-server.md  qcom.md
docs/angular/: MODULE-FEDERATION.md
docs/api/: CLIENT.md  REST-API.md
docs/architecture/: DATAFRAME.md  OVERVIEW.md  PLUGINS.md  SERVER.md
docs/features/: DIFF-OUTPUT.md  EVENTS.md  PARAMETER-OVERRIDES.md
docs/getting-started/: BUILD.md
docs/graph/: EDITOR.md  SERIALIZATION.md  STORAGE.md
docs/nodes/: CATALOG.md  DYNAMIC-NODES.md  IMPLEMENTATION-CHECKLIST.md  SCALAR-NODES.md  SYSTEM.md
docs/postgresql/: INTEGRATION.md  LISTEN-NOTIFY.md  PERIMETER-CACHE.md
examples/: baseline_v1.0.0.json  benchmark_hosseinmoein.cpp  benchmark_optimized.cpp  benchmark_optimized_report.json  benchmark_report.json  comparison.json  current_v1.1.0.json  customers-10000.csv  dataframe_example.cpp  transfer_pricing_10k.csv  tree_sample.csv
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
meta/: package-lock.json  package.json  server.js
meta/public/: index.html
src/angular/: angular.json  package-lock.json  package.json
src/angular/projects/host/public/: federation.manifest.json
src/angular/projects/host/src/app/: app.component.ts  app.routes.ts
src/angular/projects/remote-grid/: federation.config.js
src/angular/projects/remote-grid/src/: index.html  styles.scss
src/angular/projects/remote-grid/src/app/: app.component.spec.ts  app.routes.ts
src/angular/projects/remote-grid/src/app/components/button-viewer/: button-viewer.component.html  button-viewer.component.scss  button-viewer.component.ts
src/angular/projects/remote-grid/src/app/components/data-grid/: data-grid.component.html  data-grid.component.scss  data-grid.component.ts
src/angular/projects/remote-grid/src/app/components/list-viewer/: list-viewer.component.html  list-viewer.component.scss  list-viewer.component.ts
src/angular/projects/remote-grid/src/app/services/: anode-api.service.ts
src/angular/projects/remote-grid/src/app/shared/: models.ts  utils.ts
src/angular/projects/remote-grid/src/app/viewer/: viewer.component.html  viewer.component.scss  viewer.component.ts
src/benchmark/: BenchmarkReporter.cpp  BenchmarkReporter.hpp
src/client/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.mcp.json  vite.config.ts
src/client/examples/: aggrid.html  graph-editor.html  graphs.html  index.html  viewer.html
src/client/lib/: AnodeClient.ts  LiteGraphAdapter.ts  index.ts
src/client/mcp/: README.md  client.ts  events.ts  index.ts  server.ts  state.ts  types.ts  ws-server.ts
src/client/mcp/tools/: catalog.ts  editing.ts  execution.ts  graphs.ts
src/client/src/: index.ts  main.ts
src/client/src/api/: AnodeClient.ts
src/client/src/execution/: index.ts  sse-client.ts  state.ts
src/client/src/graph/: colors.ts  conversion.ts  history.ts  nodeTypes.ts  shortcuts.ts
src/client/src/styles/: main.css
src/client/src/sync/: delta-handler.ts  index.ts  types.ts  ws-client.ts
src/client/src/types/: litegraph.ts
src/client/src/ui/: csvEditor.ts  dataframe.ts  executionHistory.ts  modals.ts  toolbar.ts
src/dataframe/: Column.hpp  DataFrame.cpp  DataFrame.hpp  DataFrameAggregator.cpp  DataFrameAggregator.hpp  DataFrameFilter.cpp  DataFrameFilter.hpp  DataFrameIO.cpp  DataFrameIO.hpp  DataFrameJoiner.cpp  DataFrameJoiner.hpp  DataFrameSerializer.cpp  DataFrameSerializer.hpp  DataFrameSorter.cpp  DataFrameSorter.hpp  StringPool.hpp
src/nodes/: DateTimeUtil.cpp  DateTimeUtil.hpp  DynRequest.cpp  DynRequest.hpp  EquationParser.cpp  EquationParser.hpp  ExecutionEvent.hpp  LabelRegistry.cpp  LabelRegistry.hpp  NodeBuilder.cpp  NodeBuilder.hpp  NodeContext.cpp  NodeContext.hpp  NodeDefinition.cpp  NodeDefinition.hpp  NodeExecutor.cpp  NodeExecutor.hpp  NodeGraphSerializer.cpp  NodeGraphSerializer.hpp  NodeRegistry.cpp  NodeRegistry.hpp  PluginContext.hpp  Types.cpp  Types.hpp  plugin_init.hpp.in
src/nodes/nodes/common/: AggregateNodes.cpp  AggregateNodes.hpp  CMakeLists.txt  CsvNodes.cpp  CsvNodes.hpp  DynamicNodes.cpp  DynamicNodes.hpp  LabelNodes.cpp  LabelNodes.hpp  MathNodes.cpp  MathNodes.hpp  PostgresNodes.cpp  PostgresNodes.hpp  ScalarNodes.cpp  ScalarNodes.hpp  SelectNodes.cpp  SelectNodes.hpp  StringNodes.cpp  StringNodes.hpp  VizNodes.cpp  VizNodes.hpp  register.cpp  register.hpp
src/postgres/: PostgresPool.cpp  PostgresPool.hpp
src/server/: HttpServer.cpp  HttpServer.hpp  HttpSession.cpp  HttpSession.hpp  Logger.cpp  Logger.hpp  Profiler.cpp  Profiler.hpp  RequestHandler.cpp  RequestHandler.hpp  SessionManager.cpp  SessionManager.hpp
src/storage/: GraphMetadata.hpp  GraphStorage.cpp  GraphStorage.hpp
tests/: ColumnTest.cpp  DataFrameAggregatorTest.cpp  DataFrameFilterTest.cpp  DataFrameIOTest.cpp  DataFrameJoinerTest.cpp  DataFrameSerializerTest.cpp  DataFrameSorterTest.cpp  DataFrameTest.cpp  DynamicNodesTest.cpp  EquationParserTest.cpp  GraphStorageTest.cpp  LabelNodesTest.cpp  NodeBuilderTest.cpp  NodeContextTest.cpp  NodeExecutorTest.cpp  NodeGraphSerializerTest.cpp  NodeTypesTest.cpp  PostgresPoolTest.cpp  SelectNodesTest.cpp  StringPoolTest.cpp  TestNodesTest.cpp
